[gd_scene load_steps=10 format=3 uid="uid://bhyrsrva7afmq"]

[ext_resource type="Script" path="res://actor/object/train.gd" id="1_pynra"]
[ext_resource type="Texture2D" uid="uid://ckbte4qcagsrl" path="res://actor/object/sprites/Train.png" id="2_h0p3c"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qjglh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h0p3c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adule"]
size = Vector2(376, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fa42o"]
size = Vector2(88, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q72uu"]
size = Vector2(474, 26)

[sub_resource type="Gradient" id="Gradient_nxlr0"]
colors = PackedColorArray(0.172833, 0.172833, 0.172833, 1, 0.442911, 0.442911, 0.442911, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_74vhd"]
gradient = SubResource("Gradient_nxlr0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j2dpa"]
particle_flag_disable_z = true
spread = 20.0
initial_velocity_min = 50.0
initial_velocity_max = 75.0
angular_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 15.0
color_ramp = SubResource("GradientTexture1D_74vhd")

[node name="Train" type="StaticBody2D"]
script = ExtResource("1_pynra")

[node name="Locomotive" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qjglh")

[node name="WagonsArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WagonsArea"]
position = Vector2(48, 0)
shape = SubResource("RectangleShape2D_adule")
debug_color = Color(0, 1, 0, 0.419608)

[node name="LocomotiveArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocomotiveArea"]
position = Vector2(-192, 0)
shape = SubResource("RectangleShape2D_fa42o")
debug_color = Color(0, 1, 0, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q72uu")
disabled = true
debug_color = Color(1, 0, 0, 0.419608)

[node name="SmokeParticles" type="GPUParticles2D" parent="."]
z_index = 10
position = Vector2(-164, 0)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_j2dpa")
lifetime = 1.5

[connection signal="body_entered" from="WagonsArea" to="." method="_on_wagons_area_body_entered"]
[connection signal="body_entered" from="LocomotiveArea" to="." method="_on_locomotive_area_body_entered"]
